ConexionBD2/src/main/java/com/example/demo/models/service/IpaisService.java
package com.example.demo.models.service;

import java.util.List;

import com.example.demo.models.entity.Pais;
public interface IpaisService {
	public List<Pais> findAll();
	//error
}
